Adjust font size of temperature to display correctly on smaller screens

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,8 +62,8 @@ body {
 }
 
 #tempSpace {
-    margin-top: 2rem;
-    font-size: 7rem;
+    margin-top: 4rem;
+    font-size: 4.5rem;
 }
 
 .modal-dialog {
